<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="layout_centerVertical"
    android:layout_alignWithParentIfMissing="false"
    android:background="@color/colorBackGroundSplah"

    android:elevation="24dp"
    android:longClickable="true"
    tools:context="com.nbs.kilaxjapan.kilaxjapan.Activity.SplashActivity">
    <!--android:theme="@style/AppThemeNoActionBar"-->

    <ImageView
        android:id="@+id/splash_screen"
        android:layout_width="@dimen/splash_screen"
        android:layout_height="@dimen/splash_screen"
        android:background="@drawable/kilax_cinza"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />
    <TextView
        android:id="@+id/splash_text1"
        android:layout_width="@dimen/splash_text_largura1"
        android:layout_height="@dimen/splash_text_altura"
        android:background="@color/colorKilaxVerde"
        android:filterTouchesWhenObscured="false"
        android:fitsSystemWindows="false"
        android:focusable="false"
        android:fontFamily="sans-serif"
        android:scrollHorizontally="false"
        android:text="@string/splash_text1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorSplashText"
        android:textSize="@dimen/splash_text_size1"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/splash_screen"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/splash_text2"
        android:layout_width="@dimen/splash_text_largura1"
        android:layout_height="@dimen/splash_text_altura"
        android:layout_alignWithParentIfMissing="false"
        android:background="@color/colorKilaxRoxo"
        android:filterTouchesWhenObscured="false"
        android:fitsSystemWindows="false"
        android:focusable="false"
        android:fontFamily="sans-serif"
        android:scrollHorizontally="false"
        android:text="@string/splash_text2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorSplashText"
        android:textSize="@dimen/splash_text_size2"
        android:textStyle="normal|bold"
        android:layout_below="@+id/splash_text1"
        android:layout_alignRight="@+id/splash_text1"
        android:layout_alignEnd="@+id/splash_text1"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <TextView
        android:id="@+id/splash_text3"
        android:layout_width="@dimen/splash_text_largura2"
        android:layout_height="@dimen/splash_text_altura"
        android:background="@color/colorKilaxLaranja"
        android:elevation="24dp"
        android:fontFamily="sans-serif"
        android:padding="@dimen/splash_text_padding"
        android:scrollHorizontally="false"
        android:text="@string/splash_text3"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorSplashText"
        android:textSize="@dimen/splash_text_size3"
        android:textStyle="normal|bold"
        android:layout_below="@+id/splash_text2"
        android:layout_alignLeft="@+id/splash_text1"
        android:layout_alignStart="@+id/splash_text1" />

</RelativeLayout>
